[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/World/ClimbEdge.gd" type="Script" id=1]
[ext_resource path="res://assets/Assets 3D/Grande roche.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/World/PathFollow.gd" type="Script" id=3]

[sub_resource type="Curve3D" id=1]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, 0.0636528, 0.559321, -0.272529, 0, 0, 0, 0, 0, 0, -0.283334, 1.48715, 0.0270566, 0, 0, 0, 0, 0, 0, -1.3198, 2.99052, -0.0967731, 0, 0, 0, 0, 0, 0, -2.59625, 5.03279, -0.370871, 0, 0, 0, 0, 0, 0, -3.54784, 5.3232, -0.311398 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0 )
}

[sub_resource type="BoxShape" id=2]

[sub_resource type="BoxShape" id=3]

[node name="Climbable" type="Spatial"]

[node name="Grande roche" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.972646, 0.232224, -0.00564507, 0.00260009, 0.0134163, 0.999907, 0.232278, -0.97257, 0.0124455, 0, 0, 0 )
mode = 1

[node name="Path" type="Path" parent="Grande roche"]
transform = Transform( 0.972646, 0.00260008, 0.232278, 0.232224, 0.0134163, -0.97257, -0.00564508, 0.999906, 0.0124455, 4.25017, 1.4057, 4.04848 )
curve = SubResource( 1 )

[node name="PathFollow" type="PathFollow" parent="Grande roche/Path"]
rotation_mode = 2
cubic_interp = false
loop = false
script = ExtResource( 3 )

[node name="ClimbStart" type="Area" parent="Grande roche"]
transform = Transform( 0.264017, 0.00105371, 0.232278, 0.0630353, 0.00543707, -0.97257, -0.00153231, 0.405221, 0.0124455, 3.81729, 1.28157, 4.03136 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Grande roche/ClimbStart"]
shape = SubResource( 2 )

[node name="ReleasePosition" type="Position3D" parent="Grande roche/ClimbStart"]
transform = Transform( 1, -5.9557e-23, 3.55271e-14, -8.32667e-17, 1, 3.30872e-24, 7.10543e-15, 0, 0.999997, 2.91007, 0.0648403, 0.194428 )

[node name="ClimbEnd" type="Area" parent="Grande roche"]
transform = Transform( 0.972646, 0.00260008, 0.232278, 0.232224, 0.0134163, -0.97257, -0.00564508, 0.999906, 0.0124455, 0.833602, 0.632233, 9.23159 )
script = ExtResource( 1 )
is_end = true

[node name="CollisionShape" type="CollisionShape" parent="Grande roche/ClimbEnd"]
transform = Transform( 0.235159, 0, 0, 0, 0.668569, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 3 )

[node name="ReleasePosition" type="Position3D" parent="Grande roche/ClimbEnd"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.219902, 0.437487, -0.295853 )
[connection signal="body_entered" from="Grande roche/ClimbStart" to="Grande roche/ClimbStart" method="_on_climb_edge_body_entered"]
[connection signal="body_exited" from="Grande roche/ClimbStart" to="Grande roche/ClimbStart" method="_on_climb_edge_body_exited"]
[connection signal="body_entered" from="Grande roche/ClimbEnd" to="Grande roche/ClimbEnd" method="_on_climb_edge_body_entered"]
[connection signal="body_exited" from="Grande roche/ClimbEnd" to="Grande roche/ClimbEnd" method="_on_climb_edge_body_exited"]
